# celery-task-queue

./: .env.example  .gitignore  README.md  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: run-tests.yml
api/: main.py  tasks.py
celery_app/: Dockerfile  app.py
tests/e2e/: test_celery.py
